# PetAdoption

./: README.md
PetAdoption/: CMakeLists.txt  main.cpp
PetAdoption/app_start/: AppStart.cpp  AppStart.h
PetAdoption/domain/: domain.cpp  domain.h
PetAdoption/dynamic_vector/: dynamic_vector.h
PetAdoption/gui/: AdoptionList_TableModel.cpp  AdoptionList_TableModel.h  admin_gui.cpp  admin_gui.h  initial_state.cpp  initial_state.h  user_gui.cpp  user_gui.h
PetAdoption/repository/: adoption_repo.cpp  adoption_repo.h  repo.cpp  repo.h
PetAdoption/repository/file_repo/: adoption_list.txt  file_repo.cpp  file_repo.h  file_repo.txt  file_repo_adoption.cpp  file_repo_adoption.h
PetAdoption/repository/file_repo/csv/: adoption_list.csv  csv_repo.cpp  csv_repo.h
PetAdoption/repository/file_repo/html/: adoption_list.csv  adoption_list.html  html_repo.cpp  html_repo.h
PetAdoption/sensor/: sensor.cpp  sensor.h
PetAdoption/service/: adoption_service.cpp  adoption_service.h  service.cpp  service.h
PetAdoption/tests/: file_for_tests.txt  file_for_tests2.txt  file_tests_adoption.txt  program_tests.cpp  program_tests.h
PetAdoption/ui/: admin_interface.cpp  admin_interface.h  user_interface.cpp  user_interface.h
PetAdoption/undo_redo/: operation.cpp  operation.h  undo_redo.cpp  undo_redo.h
PetAdoption/validators/: exceptions.h  validating.cpp  validating.h
